--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,14 +37,9 @@
 
                 {{- /* License */ -}}
                 {{- with .Site.Params.footer.license -}}
-                    &nbsp;|&nbsp;<span class="license">{{ . | safeHTML }}</span>
+                    <span class="license">{{ . | safeHTML }}</span>
                 {{- end -}}
 
-                {{- /* ICP */ -}}
-                {{- with .Site.Params.footer.icp -}}
-                    <span class="icp-splitter">&nbsp;|&nbsp;</span><br class="icp-br"/>
-                    <span class="icp">{{ . | safeHTML }}</span>
-                {{- end -}}
             </div>
         </div>
     </footer>
